platform/observability/overlays/prod/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  labels:
    app.kubernetes.io/part-of: platformforge
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana-prod.brianbeck.net`)
      kind: Rule
      services:
        - name: observability-prod-grafana
          port: 80
          scheme: http
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/part-of: platformforge
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus-prod.brianbeck.net`)
      kind: Rule
      services:
        - name: prometheus-operated
          port: 9090
          scheme: http
  tls: {}
